Bug 1088467 - Avoid adding space for bullet with list-style: none. r=surkov, a=lmandel